syntax = "proto3";

package common;

message MachineId {
  string id = 1;
}

message MachineIdList {
  repeated MachineId machine_ids = 1;
}

// A list of strings
// This is different than "repeated string" since using StringList
// allows to express a nullable/optional list
message StringList {
  repeated string items = 1;
}

message UUID {
  string value = 1;
}

message PowerShelfId {
  string id = 1;
}

message RackId {
  string id = 1;
}

message SwitchId {
  string id = 1;
}

message Uint32List {
  repeated uint32 items = 1;
}

message RouteTarget {
  uint32 asn = 1;
  uint32 vni = 2;
}

// Placeholder ID types: These are not code-generated, but overridden by our own type-safe UUID wrappers. They are
// identical to common.UUID over the wire, for backwards compatibility.
message DomainId {
  string value = 1;
}
message MachineInterfaceId {
  string value = 1;
}
message VpcId {
  string value = 1;
}
message VpcPrefixId {
  string value = 1;
}
message VpcPeeringId {
  string value = 1;
}
message IBPartitionId {
  string value = 1;
}
message InstanceId {
  string value = 1;
}
message NetworkSegmentId {
  string value = 1;
}
message DpaInterfaceId {
  string value = 1;
}
message NetworkPrefixId {
  string value = 1;
}
message RemediationId {
  string value = 1;
}

message NVLinkPartitionId {
  string value = 1;
}

message NVLinkLogicalPartitionId {
  string value = 1;
}

message NVLinkDomainId {
  string value = 1;
}
